--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "http://serezhqa.github.io/mesto-react",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
